--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -85,10 +85,10 @@ jobs:
 
     - name: addEmail
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: git config --global user-email "devieswar79@gmail.com"
+      run: git config --global user.email "devieswar79@gmail.com"
     - name: addName
       working-directory: $f{env.GITHUB_WORKSPACE}} 
-      run: git config --global user-name "devieswar"
+      run: git config --global user.name "devieswar"
     - name: add
       working-directory: ${{env.GITHUB_WORKSPACE}} 
       run: git add PipelinesExe.exe
