--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -87,7 +87,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: git config --global user.email "devieswar79@gmail.com"
     - name: addName
-      working-directory: $f{env.GITHUB_WORKSPACE}} 
+      working-directory: ${{env.GITHUB_WORKSPACE}} 
       run: git config --global user.name "Devi Eswar Kumar"
     - name: add
       working-directory: ${{env.GITHUB_WORKSPACE}} 
