--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -81,7 +81,7 @@ jobs:
 
     - name: stage
       working-directory: ${{env.GITHUB_WORKSPACE}} 
-      run: copy x64\Release\PipeplinesExe.exe .
+      run: copy x64\Release\PipelinesExe.exe .
 
     - name: addEmail
       working-directory: ${{env.GITHUB_WORKSPACE}}
