--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -81,7 +81,7 @@ jobs:
 
     - name: stage
       working-directory: ${{env.GITHUB_WORKSPACE}} 
-      run: copy x64\Release\PipelinesExe.exe .
+      run: copy x64\Release\PipeplinesExe.exe .
 
     - name: addEmail
       working-directory: ${{env.GITHUB_WORKSPACE}}
@@ -91,7 +91,7 @@ jobs:
       run: git config --global user.name "Devi Eswar Kumar"
     - name: add
       working-directory: ${{env.GITHUB_WORKSPACE}} 
-      run: git add PipelinesExe.exe
+      run: git add PipeplinesExe.exe
     - name: commit
       working-directory: $f{env.GITHUB_WORKSPACE}} 
       run: git commit -m "generated"
