--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -93,7 +93,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}} 
       run: git add PipeplinesExe.exe
     - name: commit
-      working-directory: $f{env.GITHUB_WORKSPACE}} 
+      working-directory: ${{env.GITHUB_WORKSPACE}} 
       run: git commit -m "generated"
     - name: push
       working-directory: ${{env.GITHUB_WORKSPACE}} 
